dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta - will be overwritten
dnl If you don't want it to overwrite it,
dnl 	Please disable it in the Anjuta project configuration

AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(barrage, 1.0.2)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_RANLIB
AC_EXEEXT

CFLAGS="$CFLAGS -Wall -g"

dnl check SDL version                                                           
AM_PATH_SDL(1.2.0,, AC_MSG_ERROR(lib SDL is needed))                            
CFLAGS="$CFLAGS $SDL_CFLAGS"                                                    
LIBS="$LIBS $SDL_LIBS"

dnl check sound
audio_flag="-DAUDIO_ENABLED"
audio_lib="-lSDL_mixer"
AC_ARG_ENABLE( audio,
[  --disable-audio             Disables Audio], audio_flag=""; audio_lib="")
dnl check if SDL_mixer's installed
dnl if not: clear sound_flag and mixer_flag
AC_CHECK_LIB(SDL_mixer, main,
AC_MSG_RESULT("SDL_Mixer found"), 
AC_MSG_RESULT("SDL_Mixer NOT found: Audio disabled: Please visit http://libsdl.org"); audio_flag=""; audio_lib="")

AC_SUBST(audio_flag)
AC_SUBST(audio_lib)

src_dir="$datadir/games/barrage"

dnl check if installation was disabled
AC_ARG_ENABLE( install,
[  --disable-install           No installation. Played from the source directory.],
src_dir="." )
src_dir_flag="-DSRC_DIR=\\\"$src_dir\\\""
AC_SUBST(src_dir)
AC_SUBST(src_dir_flag)

AC_OUTPUT([
Makefile
src/Makefile
src/gfx/Makefile
src/sounds/Makefile
barrage.spec
])

